<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/useremailLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"

                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:imeOptions="actionNext"

                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"

                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnfpassword"
                    android:imeOptions="actionNext"

                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signupBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_orange_button"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/White"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="5dp"
                    android:imeOptions="actionGo"

                    android:text="@string/txt_already_have_an_account_link"
                    android:textColor="@color/Grey_700"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/link_terms_cnd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    android:imeOptions="actionGo"

                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:padding="5dp"
                    android:text="@string/appTermsandUse"
                    android:textColor="@color/Grey_700"
                    android:textColorLink="@color/Blue"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>


    <!--
    </androidx.constraintlayout.widget.ConstraintLayout>-->
