<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="start"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/tinmen"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints,UnknownId">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/getstarteddescTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Grey"
            android:layout_marginTop="25dp"
            android:text="@string/app_getstarted_desc"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="465dp" />

        <Button
            android:id="@+id/getstartedBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_addtocart_selector"
            android:padding="10dp"
            android:text="@string/app_getstarted"
            android:textColor="@color/White"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>