<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="2dp"
            android:orientation="horizontal">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/product_list_row_productIM"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/epooja_loader"
                android:visibility="visible"
                app:siBorderColor="@color/Orange_A700"
                app:siRadius="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="9"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chef_name"
                        android:drawableLeft="@drawable/chef_cap"
                        android:drawableTint="@color/Orange"
                        android:drawablePadding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="roboto-thin"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/chef_name"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText"
                        android:drawableStart="@drawable/chef_cap" />

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="roboto-thin"
                        android:gravity="start"
                        android:maxLines="3"
                        android:minLines="1"
                        android:text="@string/prd_desc_placeholder"
                        android:textColor="@color/Grey"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/product_price_with_offer_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:maxLength="10"
                        android:paddingEnd="2dp"
                        android:paddingRight="2dp"
                        android:singleLine="true"
                        android:text="@string/price"
                        android:textColor="@color/Black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <ImageButton
                        android:id="@+id/precheckout_product_detailsview_itemDelete"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/delete_bin_new"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/food_lunch_dinner"
                android:textStyle="bold"
                android:textColor="@color/Grey"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/deliver_at"
                android:textStyle="bold"
                android:textColor="@color/lightBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="11AM - 1PM"
                android:drawablePadding="5dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/time_of_birth"
                android:textColor="@color/Grey"
                android:textSize="18sp"
                android:drawableStart="@drawable/time_of_birth" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>