<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newpasswordLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newpasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpassword"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cnfnewpasswordLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cnfnewpasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnfpassword"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePassBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_orange_button"
                android:imeOptions="actionDone"
                android:text="@string/changepassword"
                android:textAllCaps="false"
                android:textColor="@color/White"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLT" />


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/link_signupTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:imeOptions="actionGo"

                    android:text="@string/new_sign_up"
                    android:textColor="@color/Grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/link_forgot_passwordTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:imeOptions="actionGo"

                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/txt_action_forgot_password"
                    android:textColor="@color/Grey"
                    android:textSize="14sp" />


            </LinearLayout>-->

        </LinearLayout>

        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:text="@string/byclicksignup"
             android:textColor="@color/Grey"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout" />-->
    </LinearLayout>
</ScrollView>